tests/030-syntax-error/err.expected
error: expecting "]" in broken.ini:1:4:
[fu
   ^
